2002-12-09  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp: added AVI writing support

2002-12-02  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Commands.cpp: added missing options
	* src/win32/Win32.cpp (updateFilter): added 32-bit mode support for Kreed filters
	* src/SDL.cpp (main): added 32-bit mode support for Kreed filters
	* src/2xSaI.cpp (Scale_2xSaI): added 32-bit mode support

2002-12-01  Forgotten  <forgotten@users.sourceforge.net>

	* src/tvmode.cpp (TVMode32): 32-bit mode support
	* src/simple2x.cpp (Simple2x32): 32-bit mode support
	* src/pixel.cpp (Pixelate32): 32-bit mode support
	* src/motionblur.cpp (MotionBlur32): 32-bit mode support
	* src/admame.cpp (AdMame2x32): 32-bit mode support
	* src/SDL.cpp (systemDrawScreen): added support for filters in 32-bit mode
	* src/win32/Win32.cpp (updateFilter): added support for filters in 32-bit mode

2002-11-29  Forgotten  <forgotten@users.sourceforge.net>

	* src/Sound.cpp (soundMix): respect sound rations for CGB and DS
	* src/GBA.cpp (CPULoadRom): fill memory to simulate no cartridge connected

2002-11-28  Forgotten  <forgotten@users.sourceforge.net>

	* src/GBA.cpp (CPULoop): renamed arm-new.cpp and thumb.cpp to .h

2002-11-27  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (fileOpen): add option for no IPS patching
	* src/SDL.cpp (main): add option for no IPS patching

2002-11-26  Forgotten  <forgotten@users.sourceforge.net>

	* src/GBA.cpp (CPULoadRom): check for memory allocation error
	* src/GBA.cpp (CPUWriteBatteryFile): fixed error message when failed to write battery file

2002-11-25  Forgotten  <forgotten@users.sourceforge.net>

	* src/SDL.cpp (systemSoundInit): correct sound type for big endian systems
	* src/Gfx.h (gfxDrawSprites): fixed big endian problem with rotation sprites
	* src/bios.cpp (BIOS_MidiKey2Freq): small clean up on logging
	* src/win32/MemoryViewer.cpp (setCaretPos): show current edit address